# jobhunt

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  Dockerfile  README.md  UI-OVERHAUL.md  alembic.ini  docker-compose.yml  entrypoint.sh  env.template  main.py  pyproject.toml  start.sh
.claude/hooks/: post-tool-check.sh
.claude/skills/build-ontology/: SKILL.md  exploration-playbook.md  ontology-notes-template.md  view-conventions.md
.claude/skills/extend-ontology/: SKILL.md  migration-template.py  recipe-template.md
.claude/skills/ingest-data/: SKILL.md  migration-template.py
.claude/skills/review-ontology/: SKILL.md  report-template.md  review-checklist.md
.github/workflows/: deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_toolbox_to_conversations.py  003_replace_signals_with_task_outputs.py  004_procrastinate_schema.py  005_add_users_and_scope_conversations.py  006_add_pgvector_and_document_chunks.py  007_add_jobs_table.py  008_drop_users_and_auth.py  009_add_jobs_match_reason.py  010_add_jobs_application_text.py
backend/: config.py
backend/api/: auth.py  dependencies.py  vercel_adapter.py
backend/api/models/: auth.py  chat.py
backend/api/routers/: admin.py  chat.py  data.py  documents.py  health.py  internal.py  jobs.py  task_outputs.py
backend/core/agents/: chat_agent.py  config.py  deps.py  model_config.py
backend/core/entities/: __init__.py  conversation.py  job.py  task_output.py  task_status.py  user.py
backend/core/interfaces/: application_assistant.py  conversation_repository.py  data_warehouse.py  document_chunk_repository.py  embedding_provider.py  filesystem.py  ingestion.py  ingestion_log.py  job_matcher.py  job_repository.py  job_source.py  prompt_loader.py  storage_config.py  supabase_admin.py  task_output_repository.py  task_queue.py  user_repository.py
backend/core/jobs/: profile.py  relevance.py
backend/core/queries/: types.py
backend/core/services/: compaction.py
backend/core/tasks/: generate_signals.py  index_documents.py  ingest_file.py  scrape_jobs.py
backend/customer/: __init__.py  prompt_keys.py  queries.py  toolboxes.py
backend/customer/tasks/: __init__.py
backend/customer/tools/: __init__.py
backend/infrastructure/application_assistant/: llm.py
backend/infrastructure/data_warehouse/: duckdb_warehouse.py
backend/infrastructure/db/: database.py
backend/infrastructure/embeddings/: __init__.py  openai.py
backend/infrastructure/filesystem/: local.py
backend/infrastructure/ingestion/: local.py
backend/infrastructure/job_matcher/: llm.py
backend/prompts/: jobhunt.md  production.md  sales.md  system.md
docs/: ontology-pipeline.md  ontology.md
frontend/: .env.template  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: apply_delta_migrations.py  check_customer_config.py  check_ontology.py  check_views.py  ingest.py  lint.sh  seed.py  warehouse_debug.py
tests/: conftest.py  test_capital_region.py  test_chat_disconnect.py  test_chat_integration.py  test_compaction.py  test_data_api.py  test_deferred_tools.py  test_duckdb_concurrency.py  test_duckdb_views.py  test_duunitori_parser.py  test_execute_sql.py  test_file_prompt_loader.py  test_ingestion_integration.py  test_internal_api.py  test_job_repository.py  test_local_filesystem.py  test_local_ingestion.py  test_local_task_queue.py  test_relevance.py  test_scrape_jobs.py  test_task_outputs_api.py  test_tyomarkkinatori_parser.py  test_vercel_adapter.py
tests/evals/: __init__.py  _case.py  _report.py  _runner.py  conftest.py  test_evals.py  test_zz_report.py
tests/fakes/: __init__.py  agent.py
(+101 files in other folders)
