[project]
name = "fulcrum-chat"
version = "0.1.0"
description = "Full-stack AI chatbot with Vercel AI SDK frontend and PydanticAI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.120.4",
    "pydantic==2.12.5",
    "pydantic-settings==2.9.1",
    "uvicorn[standard]==0.40.0",
    "pydantic-ai==1.88.0",
    "openai==2.33.0",
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.31.0",
    "polars[excel]==1.39.0",
    "deltalake==1.5.0",
    "duckdb==1.5.0",
    "alembic==1.17.0",
    "procrastinate[sqlalchemy]==3.8.1",
    "adlfs==2026.2.0",
    "azure-identity==1.25.3",
    "python-dotenv==1.2.2",
    "pyjwt[crypto]==2.12.1",
    "httpx==0.28.1",
    "supabase==2.28.3",
    "pgvector==0.3.6",
    "pypdf==6.10.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pyright==1.1.406",
    "ruff==0.12.3",
    "aiosqlite==0.22.1",
    "pip-audit==2.9.0",
]

[tool.uv]
constraint-dependencies = [
    "aiohttp==3.13.5",
    "authlib==1.6.11",
    "cryptography==46.0.7",
    "fastmcp==3.2.4",
    "filelock==3.28.0",
    "hf-xet==1.4.3",
    "pip==26.1",
    "protobuf==6.33.6",
    "pyasn1==0.6.3",
    "pygments==2.20.0",
    "pyjwt==2.12.1",
    "python-multipart==0.0.26",
    "requests==2.33.1",
    "starlette==0.49.3",
    "urllib3==2.6.3",
]

[build-system]
requires = ["setuptools==82.0.1", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["frontend*", "alembic*"]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "frontend",
    "alembic",
    "fulcrum_chat.egg-info",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print (no print statements)
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PL",    # pylint
    "RUF",   # ruff-specific rules
    "PERF",  # perflint (performance)
    "FURB",  # refurb (modernization)
    "LOG",   # flake8-logging
    "ASYNC", # flake8-async
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # function call in argument defaults (FastAPI Depends pattern)
    "S104",    # binding to all interfaces (required for web apps/Docker)
    "PLR0913", # too many arguments (common in FastAPI)
    "PLR2004", # magic value comparison (too noisy)
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",    # assert is fine in tests
    "ARG001",  # unused function arguments (fixtures)
    "PLR2004", # magic values in tests
    "PERF401", # list comprehension suggestion (clarity over perf in tests)
]
"scripts/**/*.py" = [
    "T20",     # print is the primary output mechanism in CLI scripts
    "S608",    # SQL injection — CLI scripts with no untrusted input
    "E402",    # late imports after sys.path manipulation
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["backend", "main.py", "tests"]
exclude = [
    "frontend/",
    "fulcrum_chat.egg-info/",
    "alembic/",
    ".venv/",
]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
